--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: home
 			<img class="img-circle" src="{{ site.baseurl }}/static/img/{{ site.avatar }}" height="300" width="300">
 		</div>
 
-	<h4>Hi! I'm <strong>{{ site.author }}</strong>, Engineer pursuing a Master's degree in Electrical Engineering @ UFPB.</h4>
-	<h4>Engineer | Data Science, ML, DL enthusiast |</h4>
-	<h4>I'm currently looking for opportunities</h4>
+	<h4>Hi! I'm <strong>{{ site.author }}</strong>, a Brazilian Engineer pursuing a Master's degree in Electrical Engineering @ UFPB.</h4>
+	<h4>| Data Science, ML, DL enthusiast |</h4>
+	<h4>I'm currently looking for job opportunities worldwide</h4>
 	<br/>
 	<h4>Access my <a href="{{ site.baseurl }}/portfolio"> portfolio</a> and also follow my <a href="{{ site.baseurl }}/publications"> publications</a>.</h4>
 		
